[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "proxy"
version = "0.0.0"
description = ""
authors = ["backwardspy <backwardspy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
aiohttp = "^3.8.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
black = "^21.10-beta.0"
pylint = "^2.11.1"
mypy = "^0.910"
isort = "^5.9.3"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
ptpython = "^3.0.20"
